--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -20,7 +20,7 @@
   $foreground: map.get($color-config, foreground);
 
   .form-container {
-    background-color: mat.get-color-from-palette($background, card) !important;
+    background-color: mat.get-color-from-palette($background, card);
     color: mat.get-color-from-palette($foreground, text);
   }
 
@@ -112,6 +112,8 @@ $dark-login-page-demo-theme: mat.define-dark-theme(
 @media (prefers-color-scheme: dark) {
   // Apply the dark theme
   @include mat.all-component-colors($dark-login-page-demo-theme);
+  @include login-page-theme($dark-login-page-demo-theme);
+
   // Add different logo for dark
   .logo {
     content: url("assets/02_msi-logo-signature.png");
